--- a/.github/workflows/ticket-check.yml
+++ b/.github/workflows/ticket-check.yml
@@ -1,7 +1,11 @@
 name: melon-ticket-check
 on:
+  push:
+    branches:
+      - main    # main 브랜치에 push 시 즉시 실행
   schedule:
     - cron: '*/5 * * * *' # 5분마다 실행
+
 jobs:
   check-ticket:
     runs-on: ubuntu-latest
@@ -10,8 +14,8 @@ jobs:
       - name: Check Tickets
         uses: mooyoul/melon-ticket-actions@v1.1.0
         with:
-          product-id: 211664           # Melon Ticket 공연 ID
-          schedule-id: 100001          # 공연 일정 ID
-          seat-id: 1_0                 # 좌석 ID
+          product-id: 211664                # 공연 ID
+          schedule-id: 100001               # 일정 ID
+          seat-id: 1_0                      # 좌석 ID (테스트용)
           slack-incoming-webhook-url: ${{ secrets.SLACK_WEBHOOK_URL }}
-          message: '<@U12345678> 티켓 열렸어요!'
+          message: '티켓 열렸어요! 달려달려~'
